--- a/index.css
+++ b/index.css
@@ -118,3 +118,12 @@ table, th, td {
   border: 1px solid black;
   border-radius: 10px;
 }
+label {
+  display: block;
+  font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+  margin: .4rem 0;
+}
